# geometry

./: .gitignore  CMakeLists.txt  README.md  cube.gauss_curv  cube.mean_curv  cube5.guass_curv  cube5.mean_curv  laplace.cpp  test.cpp
data/RigNet/13/: 0.off  1.off  2.off  3.off  5.off  6.off
data/RigNet/7/: 0.off  1.off  2.off  3.off  5.off  7.off  8.off  9.off
egl/: cotmatrix.h  edge_topology.h  squared_edge_length.h
include/: cotmatrix.h  invert_diag.h  readSMAT.h  test_data.h  writeDMAT.h  writeSMAT.h
include/Math/: MPoint3.h  Mrgb.h
include/PolyMesh/: MemoryPool.h  PolyMesh.h  PolyMeshIterators.h  PolyMesh_Base.h
script/: run_igl_curvature.sh
src/: PolyMesh.cpp  PolyMesh_Base.cpp  main.cpp
src/acam/: main.cpp  test.cpp
src/acam/hw1/: Algorithm.cpp  main.cpp
src/acam/hw12/: main.cpp
src/acam/hw13/: HW13-main.cpp
src/acam/hw2/: main.cpp
src/acam/hw6/: arap_deformation.cpp
src/acam/hw7/: main.cpp
src/acam/hw8/: main.cpp
src/cgal/: test_euler.cpp
src/egl/: test.cpp  test_egl.cpp
src/egl/cgal/: test_polyhedron.cpp
src/geoc/: main.cpp
src/hw10/: HW10-main.cpp
src/hw11/: AABB_Tree.cpp  main.cpp
src/hw12/: main.cpp
src/hw2/: main.cpp
src/hw3/: main.cpp
src/hw5/: arap_parameterizations.cpp
src/hw9/: main.cpp
src/igl/: curvature.cpp
src/mesh_contract/: main.cpp  repair.cpp
src/spline/: Spline.cpp  Spline.h  main.cpp
src/sskel/: core.h  dbl.cpp  dbl.h  geom_2.cpp  geom_2.h  in_place_list.h  macros.h  main.cpp  ref_count_base.h  sskel_aux.h  sskel_builder.h  sskel_cons.cpp  sskel_cons.h  sskel_events.h  sskel_items.h  sskel_pred.cpp  sskel_pred.h  straight_skeleton.h  typedefs.h
src/voronoi/: geom_entity.cpp  geom_entity.h  halfplane.h  macros.h  main.cpp  voronoi.cpp  voronoi.h
